--- a/ProyectoPracticaII/Client/Pages/PTaller/ListaTaller.razor
+++ b/ProyectoPracticaII/Client/Pages/PTaller/ListaTaller.razor
@@ -26,7 +26,7 @@
             <ul>
                 <a href="/Inicio">Inicio</a>
                 <a href="#">Mi Perfil</a>
-                <a href="PMotocicletas/ListaMotocicletas/">Mis Motos</a>
+                <a href="PMotocicletas/ListaMotocicletas/@login">Mis Motos</a>
                 <a href="#">Salir</a>
             </ul>
 
@@ -44,7 +44,7 @@
 
     <br />
     <div class="btnCentrado">
-        <a class="btnCrear" href="/PTaller/CrearT"> REGISTRAR UN NUEVO TALLER</a>
+        <a class="btnCrear" href="/PTaller/CrearT/@login"> REGISTRAR UN NUEVO TALLER</a>
     </div>
    
     <div id="main-container">
