--- a/ProyectoPracticaII/Client/Pages/Perfil/EditarPerfil.razor
+++ b/ProyectoPracticaII/Client/Pages/Perfil/EditarPerfil.razor
@@ -16,7 +16,7 @@
 
 
 @code {
-    
+
 
 
 
@@ -28,6 +28,7 @@
     protected async override Task OnInitializedAsync()
     {
         await Mostrar();
+        usuarios.Clave = string.Empty;
     }
 
 
