--- a/ProyectoPracticaII/Client/Pages/PMotocicletas/CrearMoto.razor
+++ b/ProyectoPracticaII/Client/Pages/PMotocicletas/CrearMoto.razor
@@ -1,4 +1,4 @@
-﻿@page "/PMotocicletas/CrearMoto"
+﻿@page "/PMotocicletas/CrearMoto/{login:int}"
 @using Microsoft.AspNetCore.Authorization;
 @using Microsoft.AspNetCore.Components.Authorization;
 @using ProyectoPracticaII.Client.Models;
@@ -50,7 +50,7 @@
             <h4> CARGAR DATOS DE TU MOTO</h4>
             <label>IdUsuario</label>
 
-            <InputNumber @bind-Value=@IdUsuario readonly style=" width: 100%;
+            <InputNumber @bind-Value=NuevaMotocicleta.IdUsuario readonly style=" width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"> Marca</InputNumber>
             <label>Marca</label>
             <InputText class="controls" @bind-Value=NuevaMotocicleta.Marca style=" width: 100%;
@@ -59,8 +59,12 @@
             <InputText class="controls" @bind-Value=NuevaMotocicleta.Modelo style=" width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003;; font-size:18px; color: white;">Modelo</InputText>
             <label>Año</label>
-            <InputNumber class="controls" @bind-Value=NuevaMotocicleta.Año style=" width: 100%;
-    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003;; font-size:18px; color: white;">Año</InputNumber>
+            <select class="controls" @bind="NuevaMotocicleta.Año" style="width: 100%; background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;">
+                @for (int i = 1950; i <= 2024; i++)
+                {
+                    <option value="@i">@i</option>
+                }
+            </select>
             <label>Patente</label>
             <InputText class="controls" @bind-Value=NuevaMotocicleta.Patente style=" width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003;; font-size:18px; color: white;">Patente</InputText>
@@ -95,6 +99,18 @@
     string storedUserPreferences;
     string IdUsuario;
 
+    protected override async Task OnInitializedAsync()
+    {
+        base.OnInitialized();
+
+        NuevaMotocicleta.IdUsuario = login;
+
+
+
+
+
+
+    }
 
     private async Task Read()
     {
@@ -157,7 +173,7 @@
             var body = resultado.HttpResponseMessage;
 
         }
-        NavigatorManager.NavigateTo($"/PMotocicletas/ListaMotocicletas/{IdUsuario}");
+        NavigatorManager.NavigateTo($"/PMotocicletas/ListaMotocicletas/{login}");
     }
 
   
