--- a/ProyectoPracticaII/Client/Pages/PMotocicletas/FormMoto.razor
+++ b/ProyectoPracticaII/Client/Pages/PMotocicletas/FormMoto.razor
@@ -50,8 +50,12 @@
             <InputText @bind-Value=moto.Modelo style=" width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"> </InputText>
             <label>Año</label>
-            <InputNumber @bind-Value=moto.Año style=" width: 100%;
-    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;">Año</InputNumber>
+            <select class="controls" @bind="moto.Año" style="width: 100%; background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;">
+                @for (int i = 1950; i <= 2024; i++)
+                {
+                    <option value="@i">@i</option>
+                }
+            </select>
             <label>Patente</label>
             <InputText @bind-Value=moto.Patente style=" width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;">Patente</InputText>
