--- a/ProyectoPracticaII/Client/Pages/PTaller/FormTaller.razor
+++ b/ProyectoPracticaII/Client/Pages/PTaller/FormTaller.razor
@@ -80,7 +80,7 @@
             <InputText class="controls" @bind-Value=taller.LinksMapa style=" width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputText>
 
-            <button class="btnC" @onclick="(()=>ActualizarTaller(taller))">Registrar Taller</button>
+            <button class="btnC" @onclick="(()=>ActualizarTaller(taller))">Actualizar taller</button>
             <button class="btnC" @onclick="onCancel"> Cancelar</button>
 
 
