--- a/ProyectoPracticaII/Client/Pages/PTaller/FormTaller.razor
+++ b/ProyectoPracticaII/Client/Pages/PTaller/FormTaller.razor
@@ -49,7 +49,7 @@
             <h4> ACTUALIZAR DATOS DE TU TALLER</h4>
             <label>IdUsuario</label>
 
-            <InputNumber @bind-Value=taller.IdUsuario style=" width: 100%;
+            <InputNumber @bind-Value=taller.IdUsuario readonly style=" width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputNumber>
 
             <label>Nombre</label>
@@ -102,7 +102,55 @@
 @code{
     [Parameter] public Taller taller { get; set; }
     [Parameter] public EventCallback onCancel { get; set; }
+    string IdUsuario;
+    string userPreferences;
+    string storedUserPreferences;
+    @inject IJSRuntime JSRuntime
 
+    protected override async Task OnInitializedAsync()
+    {
+        base.OnInitializedAsync();
+        ReadTaller();
+        
+    }
+
+
+    private async Task ReadTaller()
+    {
+
+        storedUserPreferences = await JSRuntime.InvokeAsync<string>("sessionStorage.getItem", "correo");
+
+
+
+        await ObtenerIdUsuario();
+
+
+
+
+
+    }
+    async Task ObtenerIdUsuario()
+    {
+        try
+        {
+
+            var apiUrl = $"api/RastrearId?correo={storedUserPreferences}";
+
+            var response = await http.GetAsync(apiUrl);
+            if (response.IsSuccessStatusCode)
+            {
+                IdUsuario = await response.Content.ReadAsStringAsync();
+            }
+            else
+            {
+                IdUsuario = "Error al obtener el ID del usuario";
+            }
+        }
+        catch (Exception ex)
+        {
+            IdUsuario = $"Error: {ex.Message}";
+        }
+    }
 
     public async Task ActualizarTaller(Taller taller)
     {
